1515522829 | 22 files | M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libinputsystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libnetworksystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libparticles_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librenderingpipelines_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemempty_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemgl_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemvulkan_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libresourcesystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libscenesystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvgui2_strings.txt,  M tools/steamvr_environment
https://steamdb.info/patchnotes/2469380/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -272,6 +272,9 @@
 		"VR_PhysicsProp_HTCSnowmanTwigB_Desc"		"Another twig, for making arms, legs and other snowman limbs.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
 		"VR_PhysicsProp_HTCSnowmanTwigC"			"Driftwood: Twig C"
 		"VR_PhysicsProp_HTCSnowmanTwigC_Desc"		"Yet another twig, for making arms, legs and other snowman limbs.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		
+		"VR_PhysicsProp_BOTUAlwynFigurine"			"Grand Master Alwyn"
+		"VR_PhysicsProp_BOTUAlwynFigurine_Desc"		"Once an under average teen arcade master, Alwyn Fitzpatrick transported himself into VR in the 80s only to become trapped. Having nothing but time and infinite possibilities at his fingertips he turned himself in to Grand Master Alwyn Virtual Space Lord, ruler of all VR worlds.\n\nUnlocked by playing Blasters of the Universe."
 
 	
 		// furniture
