1518226924 | 50 files | M bin/version.txt,  M content/panorama/localization/tenfoot_swedish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_japanese.txt,  M content/vrmonitor/translations/vrmonitor_errors_schinese.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_french.txt,  M content/vrmonitor/translations/vrmonitor_japanese.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translatio
https://steamdb.info/patchnotes/2519887/

--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -792,7 +792,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Success_Title"	"Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_Success_UpperText"	"Gelukt!"
 "[english]FirmwareWizard_UpdateBasestation_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Basisstationfirmware succesvol bijgewerkt. Je moet het basisstation mogelijk een keer uit en aan te zetten, voordat het basisstation de firmwarestatus als bijgewerkt ziet."
+"FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Firmware van basisstation succesvol bijgewerkt. Je moet het basisstation mogelijk een keer uit- en aanzetten voordat het basisstation de firmwarestatus als bijgewerkt ziet."
 "[english]FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Base Station firmware successfully updated. You may need to power cycle the base station before the firmware registers as updated."
 "FirmwareWizard_UpdateBasestation_Success_LowerText"	"Let er bij het terugplaatsen op dat je basisstations nog steeds in de goede kanalen zijn ingesteld (B en C voor draadloze sync, A en B voor bekabelde sync)."
 "[english]FirmwareWizard_UpdateBasestation_Success_LowerText"	"When re-mounting, make sure your bases are still set to the proper channels (B and C for wireless sync, A and B for cabled sync)."
@@ -1370,7 +1370,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Gelukt!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Basisstationfirmware succesvol bijgewerkt. Je dient het basisstation een keer uit en aan te zetten, voordat de firmwarestatus als bijgewerkt wordt gezien."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Firmware van basisstation succesvol bijgewerkt. Je moet het basisstation mogelijk een keer uit- en aanzetten voordat het basisstation de firmwarestatus als bijgewerkt ziet."
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station firmware successfully updated. You may need to power cycle the base station before the firmware registers as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"Sommige weergaven worden gespiegeld (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
@@ -1778,6 +1778,8 @@
 "[english]Lighthouse_BasestationInternalFault_04_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_05_Header"	"Basisstation onbruikbaar"
 "[english]Lighthouse_BasestationInternalFault_05_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_05_Description"	"Een basisstation heeft een intern probleem ontwikkeld (fout 05). Probeer het basisstation met het rode knipperende lampje te herstarten. Neem contact op met de fabrikant voor ondersteuning als het probleem aanhoudt."
+"[english]Lighthouse_BasestationInternalFault_05_Description"	"A base station has developed an internal problem (fault 05). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_05_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_05_Action"	"Visit htcvive.com/support"
 "Settings_StatusWindowMinimizeToTray_Text"	"SteamVR-statusscherm minimaliseert naar systeemvak"
@@ -1822,17 +1824,35 @@
 "[english]BugReporter_ReportType_Feedback"	"Feedback"
 "BugReporter_PreviewReport"	"Voorbeeldverslag"
 "[english]BugReporter_PreviewReport"	"Preview Report"
+"BugReporter_IncludeReportAndLogs"	"Systeemrapport en logboeken insluiten"
+"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
 "BugReporter_IncludeCrashDumps"	"Crashdumps insluiten"
 "[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
 "BugReporter_SubjectRequired"	"Geef een onderwerp op."
 "[english]BugReporter_SubjectRequired"	"Please supply a subject."
+"BugReporter_DescriptionRequired"	"Geef een beschrijving op."
+"[english]BugReporter_DescriptionRequired"	"Please supply a description."
+"BugReporter_FailedToCreateZip"	"ZIP-bijlage maken mislukt."
+"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
+"BugReporter_SteamLoginRequired"	"Je moet ingelogd zijn op je Steam-account om een bug te melden."
+"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
+"BugReporter_SubmissionSuccess"	"Verzenden gelukt.\n\nBedankt."
+"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_SubmissionFailure"	"Verzenden mislukt.\n\nDe bugverzamelaar kan druk zijn. Probeer het opnieuw in te zenden.\n\nFout: %1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
+"BugReporter_PreviewReportTitle"	"Een bug melden - voorbeeldverslag"
+"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Verzenden..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
 "BugReporter_ProgressSubmittingPercent"	"Verzenden... %1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR Home (bèta)"
 "[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppDesc"	"De nieuwe SteamVR Home-ervaring ondersteunt rijkere startomgevingen, sociale functies en meer. Deze functie is momenteel in bèta. Geef feedback op de fora."
+"[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Nachtmodus"
 "[english]Settings_NightModeCheck"	"Night Mode"
+"Settings_NightModeDesc"	"De nachtmodus dimt de headset tot 05:00 (of tot SteamVR wordt herstart)."
+"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
