--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -784,7 +784,7 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_IssuesWithDongles_Description"	"There are issues with the dongles in your Vive Headset."
 "Warning_DismissableWarning_IssuesWithDongles_Action"	"Mer information"
 "[english]Warning_DismissableWarning_IssuesWithDongles_Action"	"More Information"
-"Warning_DismissableWarning_IssuesWithOneDongle_Header"	"Trådlös mottagare ej upptäckt"
+"Warning_DismissableWarning_IssuesWithOneDongle_Header"	"Trådlös mottagare hittades ej"
 "[english]Warning_DismissableWarning_IssuesWithOneDongle_Header"	"Wireless Receiver Not Detected"
 "Warning_DismissableWarning_IssuesWithOneDongle_Description"	"En av de trådlösa mottagarna i ditt Vive-headset upptäcktes ej."
 "[english]Warning_DismissableWarning_IssuesWithOneDongle_Description"	"One of the wireless receivers in your Vive Headset was not detected."
@@ -858,9 +858,9 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Starta om"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows-utvecklarläge krävs"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 med senaste uppdateringarna krävs"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Up to date Windows 10 install required"
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Aktivera utvecklarläget i Windows"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Klicka här för mer information"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
 }
 }
