--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -1959,6 +1959,10 @@
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 "MenuAction_RunMediaPlayer"	"メディアプレイヤーを実行"
 "[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"ロックモード"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"ワークステーションがロックされている状態でヘッドセットへのレンダリングを許可する。"
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
 "Advanced_Bluetooth"	"Bluetooth"
 "[english]Advanced_Bluetooth"	"Bluetooth"
 }
