--- a/content/panorama/localization/tenfoot_swedish.txt
+++ b/content/panorama/localization/tenfoot_swedish.txt
@@ -633,4 +633,6 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Om \"Förbättrade SteamVR-miljöer\" är aktiverat kan du använda den app-inbäddade menyn för att anpassa ditt hemutrymme."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
 }
