--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -59,9 +59,9 @@
 "DismissableWarning_MissedFrames" "Missed Frames (0x0020)"
 "DismissableWarning_PowerSchemeIsNotHighPerformance" "Power Scheme is not High Performance (0x0040)"
 "DismissableWarning_BluetoothDriverNeedsInstallation" "Bluetooth Driver needs installation (0x0080)"
-"DismissableWarning_BluetoothDriverFailedInstallation" "Bluetooth Driver failed installation (0x0100)"
-"DismissableWarning_BluetoothLinkNeedsInstallation" "Bluetooth Link needs installation (0x0200)"
-"DismissableWarning_BluetoothLinkFailedInstallation" "Bluetooth Link failed installation (0x0400)"
+"DismissableWarning_BluetoothDriverNeedsUpdate" "Bluetooth Driver needs update (0x0100)"
+"DismissableWarning_BluetoothLinkServiceNotFound" "Bluetooth service not found (0x0200)"
+"DismissableWarning_BluetoothLinkServiceError" "Bluetooth service not found (0x0400)"
 "DismissableWarning_BluetoothLinkCommunicationFailed" "Bluetooth Link communication failed (0x0800)"
 "DismissableWarning_SomeDisplaysAreMirroring" "Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected" "Unknown Hardware Detected (0x2000)"
@@ -242,9 +242,6 @@
 "Settings_ShowPlaylistMenu" "Show Playlist Menu"
 "Settings_StartSteamVROnAppLaunch" "Start SteamVR when an application starts"
 
-"Settings_Bluetooth_Driver_Install" "Install Bluetooth Driver"
-
-
 "Settings_RestartText" "<html><B>Restart the environment after making a change to these paths.</b></html>"
 "Settings_RuntimePath" "Runtime Path:"
 "Settings_Set" "Set..."
@@ -294,9 +291,11 @@
 "Settings_LockedModeCheck" "Locked Mode"
 "Settings_LockedModeDesc" "Allow rendering to headset while workstation is locked."
 "Settings_Dashboard_Explanation" "These applications will be accessible as overlays in the Dashboard."
-"Settings_PowerOffBaseStations_Text" "Put Base Station in Standby mode when VR is not in use"
+"Settings_PowerOffBaseStations_Text" "Enable Base Station Power Management"
 "Settings_PowerOffBaseStations_Info" "Bluetooth Link must be installed to enable this feature."
+"Settings_PowerOffBaseStations_Explanation" "Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
 "Settings_BaseStationsWakeUpAll" "Wake Up All Base Stations"
+"Settings_BaseStationsWakeUpAll_Explanation" "Sends a Bluetooth signal to wake up all listening Base Stations participating in Power Management."
 "Settings_EnableScreenshots_Info" "When enabled holding the System button and activating the Trigger button will take a screenshot"
 "Settings_EnableScreenshots_Text" "Enable Screenshots (BETA)"
 "Settings_DefaultScreenshotType_Text" "Default Screenshot Type:"
@@ -307,9 +306,16 @@
 "Settings_DefaultScreenshotType_MonoPanorama" "Mono Panorama"
 "Settings_DefaultScreenshotType_StereoPanorama" "Stereo Panorama"
 
-"Settings_UseBluetoothLink_Text" "Enable Bluetooth communication"
-"Settings_UseBluetoothLink_Info" "When this is enabled, base stations can be wirelessly power managed and updated, and you can get alerts from your phone."
+"Settings_UseBluetoothLink_Text" "Enable Bluetooth Communication"
+"Settings_UseBluetoothLink_Info" "When this is enabled, Base Stations can be wirelessly power managed and updated. This may also enable additional features for some VR headsets."
 
+"Settings_Bluetooth_ServicesNotAvailable" "Bluetooth Services Not Available."
+"Settings_Bluetooth_ScanForBaseStations" "Scan For Base Stations"
+"Settings_Bluetooth_ScanForBaseStations_Explanation" "This scans for Base Stations broadcasting their Bluetooth presence that have been part of a previous tracking session."
+"Settings_Bluetooth_Driver_Install" "Install Bluetooth Driver"
+"Settings_Bluetooth_Driver_Install_Description"	"Install the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
+"Settings_Bluetooth_Driver_Update" "Update Bluetooth Driver"
+"Settings_Bluetooth_Driver_Update_Description" "Update the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
 
 "Settings_Camera_EnableCamera" "Enable Camera"
 "Settings_Camera_AllowCameraInDashboard" "Allow Camera In Dashboard"
@@ -671,8 +677,8 @@
 
 "FirmwareWizard_UpdateBasestation_Start_Title" "Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_Start_UpperText" ""
-"FirmwareWizard_UpdateBasestation_Start_MiddleText" "1. Unmount and unplug your base station from power - make sure not to accidentally press the mode button while unplugging the base station.\n\n2. Use a micro-USB cable to plug the base station into a USB port on your computer. You can use the same cable that is used to charge your controllers.\n\n3. While holding down the channel button on the back of the base station, plug in your base station's power cord."
-"FirmwareWizard_UpdateBasestation_Start_LowerText" "4. The firmware update will start automatically once your base station is detected."
+"FirmwareWizard_UpdateBasestation_Start_MiddleText" "1. Unmount and unplug your base station from power - make sure not to accidentally press the channel button while unplugging the base station.\n\n2. Use a micro-USB cable to plug the base station into a USB port on your computer. You can use the same cable that is used to charge your controllers.\n\n3. While holding down the channel button on the back of the base station, plug in your base station's power cord."
+"FirmwareWizard_UpdateBasestation_Start_LowerText" "4. The firmware update will start automatically once your base station is detected and you may release the channel button."
 
 "FirmwareWizard_UpdateBasestation_Choice_Title" "Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_Choice_UpperText" ""
@@ -702,7 +708,7 @@
 
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title" "Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText" "Firmware update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText" "If this continues to fail, quit SteamVR and power cycle your base station. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText" "If this continues to fail, quit SteamVR and power cycle the link box and base station. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText" "Click 'Retry' below to try again."
 
 "FirmwareWizard_UpdateBasestation_Success_Title" "Update Base Station Firmware"
@@ -738,6 +744,8 @@
 "FirmwareWizard_WatchmanDiskUpdate" "Watchman Disk Update"
 "FirmwareWizard_BaseStationBluetoothBLEUpdate" "Wireless BLE Update"
 "FirmwareWizard_BaseStationBluetoothMCUUpdate" "Wireless MCU Update"
+"FirmwareWizard_AudioBridgeUpdate" "Audio Bridge Update"
+"FirmwareWizard_ImageBridgeUpdate" "Image Bridge Update"
 
 "FirmwareWizard_UpdateBasestation_Manual" "Manual"
 "FirmwareWizard_UpdateBasestation_Bluetooth" "Wireless"
@@ -766,6 +774,18 @@
 "BluetoothLinkStatus_Running" "Running"
 "BluetoothLinkStatus_StoppedOrPaused" "Stopped"
 "BluetoothLinkStatus_Transient" "Changing"
+
+"BluetoothControllerStatus_Unknown"							"Unknown"
+"BluetoothControllerStatus_ServiceNotFound"					"Bluetooth Service not found. Please verify your SteamVR installation."
+"BluetoothControllerStatus_ServiceError"					"Bluetooth Service Error. Link Status: %1"
+"BluetoothControllerStatus_NoBluetoothDevice"				"Link Box with Bluetooth capability not detected. Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
+"BluetoothControllerStatus_BluetoothDriverNotInstalled"		"Link Box Bluetooth driver not installed."
+"BluetoothControllerStatus_BluetoothDriverNeedsUpdate"		"Link Box Bluetooth driver needs to be updated."
+"BluetoothControllerStatus_BluetoothDriverInstalling"		"Installing Bluetooth driver..."
+"BluetoothControllerStatus_Connecting"						"Connecting..."
+"BluetoothControllerStatus_Disconnecting"					"Disconnecting..."
+"BluetoothControllerStatus_FailedConnection"				"Bluetooth connection failed. Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
+"BluetoothControllerStatus_Connected"						"Bluetooth Connection Ready."
 
 "Audio_HDMI_Playback_Device_Name" "HTC VIVE HDMI Audio"
 "Audio_USB_Playback_Device_Name" "HTC VIVE USB Audio"
@@ -983,6 +1003,13 @@
 "BugReporter_PreviewReportTitle" "Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting" "Submitting..."
 "BugReporter_ProgressSubmittingPercent" "Submitting...%1%"
+
+"ScanForBaseStations_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"ScanForBaseStation_Incomplete" "Scanning For Base Stations...\n\nIncomplete."
+"ScanForBaseStation_FoundStations" "Scan Completed."
+"ScanForBaseStation_NoKnownStations" "Scan Completed.\n\nThere are broadcasting Base Stations within your proximity, but none of them have been used for tracking yet."
+"ScanForBaseStation_NoStationsFound" "Scan Completed.\n\nThere are no broadcasting Base Stations within your proximity."
+"ScanForBaseStations_Refresh" "Scan Again"
 
 }
 }
