--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -865,11 +865,11 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Käynnistä uudelleen"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows-kehittäjätila vaaditaan"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Ajan tasalla oleva Windows 10 -asennus vaaditaan"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Up to date Windows 10 install required"
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Windowsin täytyy olla kehittäjätilassa, jotta Windows MR bridge -ajuria voidaan käyttää."
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Käyttääksesi SteamVR:ää Windowsin yhdistetyssä todellisuudessa sinun tarvitsee asentaa viimeisin Windows-päivitys."
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"To use SteamVR with Windows Mixed Reality, you need to install the latest Windows update."
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Aseta Windows kehittäjätilaan"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Katso lisätietoja tästä"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
 }
 }
