--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -1975,6 +1975,10 @@
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 "MenuAction_RunMediaPlayer"	"Iniciar Media Player"
 "[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Settings_LockedModeCheck"	"Modo bloqueado"
+"[english]Settings_LockedModeCheck"	"Locked Mode"
+"Settings_LockedModeDesc"	"Permitir renderização para o headset enquanto a estação de trabalho estiver bloqueada."
+"[english]Settings_LockedModeDesc"	"Allow rendering to headset while workstation is locked."
 "Advanced_Bluetooth"	"Bluetooth"
 "[english]Advanced_Bluetooth"	"Bluetooth"
 }
