1522877895 | 3 files | M bin/version.txt,  M content/panorama/localization/tenfoot_english.txt,  M resources/config/vrcompositor_bindings_gamepad.json
https://steamdb.info/patchnotes/2660571/

--- a/content/panorama/localization/tenfoot_english.txt
+++ b/content/panorama/localization/tenfoot_english.txt
@@ -347,7 +347,7 @@
 	"VRSettingsCamera_RoomViewMode_Label" "Room View Camera Mode"
 	"VRSettingsCamera_RoomViewMode_EdgeA" "Colored Edges"
 	"VRSettingsCamera_RoomViewMode_EdgeB" "Colored Ghosts"
-	"VRSettingsCamera_RoomViewMode_VideoTransluscent" "Transluscent Pass-Through"
+	"VRSettingsCamera_RoomViewMode_VideoTransluscent" "Translucent Pass-Through"
 	"VRSettingsCamera_RoomViewMode_VideoOpaque" "Opaque Pass-Through"
 	"VRSettingsCamera_CameraColor" "Camera Chaperone Color"
 	"VRSettingsCamera_CameraOpacity" "Camera Chaperone Opacity"
