1539100633 | 5 files | M bin/version.txt,  M content/panorama/localization/tenfoot_english.txt,  M drivers/htc/resources/input/tracker/vive_tracker_handed_profile.json,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvphysics2_strings.txt,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/3200708/

--- a/content/panorama/localization/tenfoot_english.txt
+++ b/content/panorama/localization/tenfoot_english.txt
@@ -338,6 +338,7 @@
 	
 	"VRSettingsGeneral" "SteamVR Settings"
 	"VRSettingsBindingUITitle" "Controller Binding"
+	"VRSettingsTrackerUITitle" "Manage Vive Trackers"
 	"VRSettingsChaperone" "Chaperone Settings"
 	"VRSettingsBackground" "Customize"
 	"VRSettingsCamera" "Camera Settings"
